// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserExpandedList - Snapshots > matches snapshot with empty users 1`] = `null`;

exports[`UserExpandedList - Snapshots > matches snapshot with multiple users 1`] = `
<div
  aria-label="Users expanded list"
  class="flex max-h-(--user-expanded-list-max-height) w-full max-w-(--user-expanded-list-width) flex-col gap-2 overflow-y-auto rounded-md border border-border bg-popover p-4 shadow-2xl"
  data-testid="user-expanded-list"
  role="list"
>
  <div
    data-current-user="false"
    data-loading="false"
    data-testid="user-list-item-user1"
  >
    <span>
      user1
    </span>
    <button
      data-testid="user-click-user1"
    >
      View Profile
    </button>
    <button
      data-testid="follow-click-user1"
    >
      Follow
    </button>
  </div>
  <div
    data-current-user="false"
    data-loading="false"
    data-testid="user-list-item-user2"
  >
    <span>
      user2
    </span>
    <button
      data-testid="user-click-user2"
    >
      View Profile
    </button>
    <button
      data-testid="follow-click-user2"
    >
      Follow
    </button>
  </div>
  <div
    data-current-user="false"
    data-loading="false"
    data-testid="user-list-item-user3"
  >
    <span>
      user3
    </span>
    <button
      data-testid="user-click-user3"
    >
      View Profile
    </button>
    <button
      data-testid="follow-click-user3"
    >
      Follow
    </button>
  </div>
</div>
`;

exports[`UserExpandedList - Snapshots > matches snapshot with single user 1`] = `
<div
  aria-label="Users expanded list"
  class="flex max-h-(--user-expanded-list-max-height) w-full max-w-(--user-expanded-list-width) flex-col gap-2 overflow-y-auto rounded-md border border-border bg-popover p-4 shadow-2xl"
  data-testid="user-expanded-list"
  role="list"
>
  <div
    data-current-user="false"
    data-loading="false"
    data-testid="user-list-item-user1"
  >
    <span>
      user1
    </span>
    <button
      data-testid="user-click-user1"
    >
      View Profile
    </button>
    <button
      data-testid="follow-click-user1"
    >
      Follow
    </button>
  </div>
</div>
`;
